force-app/main/default/objects/ffr__InquiryTemplateColumnFormula__c/ffr__InquiryTemplateColumnFormula__c.object-meta.xml
<CustomObject>
    <description>Stores the formula associated with a column on an action view template.</description>
    <label>Action View Template Column Formula</label>
    <nameField>
        <displayFormat>ITCF-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action View Template Column Formulas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>