force-app/main/default/objects/ffr__InquiryTemplateColumnFormula__c/fields/ffr__InquiryTemplateColumn__c.field-meta.xml
<CustomField>
    <fullName>ffr__InquiryTemplateColumn__c</fullName>
    <label>Action View Template Column</label>
    <referenceTo>ffr__InquiryTemplateColumn__c</referenceTo>
    <relationshipLabel>Formula</relationshipLabel>
    <relationshipName>Formula</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>