force-app/main/default/objects/ffr__InquiryTemplateColumnFormula__c/fields/ffr__LiteralValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__LiteralValue__c</fullName>
    <label>Literal Value</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>