force-app/main/default/objects/ffr__InquiryTemplateColumnFormula__c/fields/ffr__OpeningBrackets__c.field-meta.xml
<CustomField>
    <fullName>ffr__OpeningBrackets__c</fullName>
    <label>Opening Brackets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>