force-app/main/default/objects/ffr__InquiryTemplateColumnFormula__c/fields/ffr__SourceColumn__c.field-meta.xml
<CustomField>
    <fullName>ffr__SourceColumn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Column</label>
    <referenceTo>ffr__InquiryTemplateColumn__c</referenceTo>
    <relationshipLabel>Column Formulas</relationshipLabel>
    <relationshipName>ColumnFormulas</relationshipName>
    <type>Lookup</type>
</CustomField>