force-app/main/default/objects/ffr__InquiryTemplateColumnFormula__c/fields/ffr__SourceField__c.field-meta.xml
<CustomField>
    <fullName>ffr__SourceField__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Field</label>
    <referenceTo>ffr__DataViewField__c</referenceTo>
    <relationshipLabel>Field Formulas</relationshipLabel>
    <relationshipName>FieldFormulas</relationshipName>
    <type>Lookup</type>
</CustomField>